fixed dropdown visibility, start button overlay now disappears upon click.

--- a/style.css
+++ b/style.css
@@ -37,9 +37,7 @@ body {
   background: rgb(20, 20, 20);
   display: flex;
   align-items: center;
-
   flex-direction: column;
-
   font-family: "Sora";
 }
 
@@ -47,7 +45,7 @@ body {
   display: flex;
 }
 
-button {
+.option-container option {
   background: none;
   border: 1px solid white;
   padding-inline: 1em;
@@ -56,17 +54,40 @@ button {
   cursor: pointer;
 }
 
-.start {
+.overlay {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   z-index: 2;
-  bottom: 50%;
+}
+
+.overlay span {
+  font-size: 1em;
+  display: inline-block;
+}
+
+#start {
+  background: hsl(214, 100%, 55%);
+  border: none;
+  text-transform: capitalize;
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding-inline: 0.5em;
+  display: inline;
+  padding-block: 0.5em;
+  border-radius: 10px;
+}
+
+main {
+  position: relative;
 }
 
 #text {
   display: flex;
-  font-size: 2em;
-  padding: 1em;
-  max-width: 400px;
+
+  width: 90%;
 
   white-space: pre-wrap;
   flex-wrap: wrap;
@@ -90,4 +111,14 @@ span {
 .current {
   background: hsl(240, 1%, 59%);
   border-radius: 0.3rem;
+}
+
+@media screen and (min-width: 750px) {
+  #text {
+    width: 60%;
+  }
+}
+
+select {
+  background: black;
 }
